2007-12-19  Gilles Casse  <gcasse@oralux.org>

	* src/audio/pulse.c: if the connection to the PulseAudio server
	fails, the internal allocations are now cleaned up. Define the
	error values in an enum.
	
2007-12-17  Hynek Hanke  <hanke@syrr.buchal.name>

	* src/server/Makefile.am (speech_dispatcher_LDADD): -ldl unnecessary.

	* src/modules/Makefile.am: -lm unnecessary in many modules.

	* src/c/api/Makefile.am: -lm unnecessary.

	* src/audio/Makefile.am (NAS_LIBS): -lXau unnecessary.

	* configure.in (flite_basic): -lm unnecessary.

2007-12-08  Gilles Casse  <gcasse@oralux.org>

	* src/audio/pulse.c, src/audio/spd_audio.h: automatically close
	the PulseAudio connection after a moment of inactivity (currently
	set to 100ms in PULSE_TIMEOUT_IN_USEC). 

	* src/audio/pulse.c: pulse_play now returns once the given track
	has been drained.

2007-11-30  Hynek Hanke  <hanke@syrr.buchal.name>

	* INSTALL: Added Pulse Audio.

	* ANNOUNCE: Added information about default access
	restrictions. Architecture details taken out. Minor
	details.

2007-11-26  Hynek Hanke  <hanke@homer.brailcom.xx>

	* src/modules/module_utils.c: Typo.

2007-11-26  Hynek Hanke  <hanke@syrr.buchal.name>

	* INSTALL: Example of server_access_list for Festival.

	* src/modules/module_utils.c (module_parent_dp_write): %d -> %ld
	for size_t argument.
	(module_strip_ssml): Convert &amp; entity back to '&'.

	* src/modules/festival.c: %d -> %ld for size_t argument.

	* src/modules/module_utils.c (module_strip_ssml): Escape ampersound
	SSML entity.

	* src/server/Makefile.am (AM_CFLAGS): Removed MODULECONFDIR.

	* config/speechd.conf.in: Default output module is espeak.

	* version.sh: Version incremented to 0.6.5rc1

	* src/server/module.c (load_output_module): Construct path to
	module config files from SpeechdOptions.conf_dir.

	* configure.in (modulebindir): MODULECONFDIR definition modified.

	* src/server/speechd.c (main): Only set SpeechdOptions.conf_dir to default